# hivemind

./: .gitignore  ANALYZE_DATA_README.md  BOARD_FLIP_AUGMENTATION.md  CITATION.cff  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  analyze_early_game_moves.py  analyze_move_distribution.py  analyze_pass_moves.py  analyze_training_data.py  auth.py  changes.txt  engine.py  evaluate_model.py  eyeball_test_dataloader.py  infer_from_fen.py  justfile  pyproject.toml  requirements.txt  search_training_fen.py  test_flip_augmentation.py  verify_flip_augmentation.py
benchmarking/: benchmark_bughouse.py  board.py
chessdotcom/: auth.py  bot.py  client.py  clientv2.py  config.yaml  constants.py
configs/: main_config.py  train_config.py
data_analysis/: analysis.py  fics.py  visualize_loss.py
data_collection/: archive.py  combine.py  download_games.py  downloader.py  filter.py  glicko2.py  main.py  measure_performance.py  update.py  validate.py
download_games/orchestration/: assets.py  download.py
engine/: .gitignore  CMakeLists.txt  README.md  agent.cpp  agent.h  bugboard.cpp  bugboard.h  clock.cpp  clock.h  constants.h  engine.cpp  engine.h  hivemind  main.cpp  network.cpp  network.h  node.cpp  node.h  planes.cpp  planes.h  searchinfo.h  searchthread.cpp  searchthread.h  uci.cpp  uci.h  utils.h
engine/Fairy-Stockfish/src/: position.cpp  position.h  stockfish
engine/cmake/: FindTensorRT.cmake
engine/deploy/: README.md
engine/deploy/runpod/: Dockerfile  README.md  build_and_push.sh  handler.py
engine/deploy/vercel/: README.md  vercel.json
engine/deploy/vercel/api/: health.py  move.py
engine/deploy/vercel/public/: index.html
engine/gui/: README.md  game_state.json  index.html  server.py  start_gui.sh
engine/selfplay_games/: games.pgn
engine/src/: agent.cc  agent.h  benchmark.cc  benchmark.h  board.cc  board.h  constants.h  engine.cc  engine.h  gc_thread.h  globals.cc  globals.h  joint_action.h  main.cc  node.cc  node.h  onnx_utils.cc  onnx_utils.h  planes.cc  planes.h  search_params.h  searchinfo.h  searchthread.cc  searchthread.h  transposition_table.h  uci.cc  uci.h  utils.h  zobrist.cc  zobrist.h
engine/src/CrazyAra/: CMakeLists.txt
engine/src/CrazyAra/src/: evalinfo.cpp  node.cpp  node.h  searchthread.cpp  searchthread.h  spinlock.h
engine/src/CrazyAra/src/agents/: agent.cpp  agent.h  mctsagent.cpp  mctsagent.h  mctsagentbatch.cpp  mctsagenttruesight.cpp  rawnetagent.cpp  rawnetagent.h
engine/src/CrazyAra/src/agents/config/: searchsettings.h
engine/src/CrazyAra/src/inference/: inferencequeue.cpp  inferencequeue.h  inferenceworker.cpp  inferenceworker.h
engine/src/CrazyAra/src/nn/: neuralnetapiuser.cpp  neuralnetapiuser.h
engine/src/CrazyAra/src/rl/: fileio.py  rl_loop.py  selfplay.cpp  selfplay.h  traindataexporter.cpp  traindataexporter.h
engine/src/CrazyAra/src/uci/: crazyara.cpp  optionsuci.cpp
engine/src/CrazyAra/src/util/: reusablebarrier.cpp  reusablebarrier.h
engine/src/Fairy-Stockfish/: CMakeLists.txt
engine/src/Fairy-Stockfish/src/: bitboard.cpp  bitboard.h  endgame.cpp  evaluate.cpp  movepick.cpp  position.cpp  position.h  psqt.cpp  stubs.cpp  stubs.h  thread.cpp  thread.h  types.h  uci.cpp  variant.cpp
engine/src/Fairy-Stockfish/src/nnue/features/: half_ka_v2.cpp
engine/src/rl/: gamepgn.cc  gamepgn.h  gui_state_writer.h  model_eval.cc  model_eval.h  rl_settings.h  selfplay.cc  selfplay.h  training_data_writer.cc  training_data_writer.h
engine/tests/: CMakeLists.txt  test_draw_detection.cc  test_mate_detection.cc  test_move_gen.cc
notebooks/: client.ipynb  colab.ipynb  kaggle.ipynb  selfplay.ipynb
pgx/: bughouse.py  chess.py
pgx/_tests/: benchmark.py  board.py  validate.py
pgx/experimental/: bughouse.py  wrappers.py
scripts/: analyze_training_data.py  evaluate_model.py  infer_from_fen.py  search_training_fen.py
server/: server.py
src/: agent.cc  agent.h  benchmark.rs  board.cc  board.h  board.rs  bot.py  bughouse.rs  constants.h  constants.py  download.py  engine.cc  engine.h  engine.rs  main.cc  main.py  main.rs  nnue.rs  node.cc  node.h  planes.cc  planes.h  scrape_cc.py  search.rs  searchinfo.h  searchthread.cc  searchthread.h  train.py  transposition.rs  types.py  uci.cc  uci.h  uci.py  utils.h
src/Fairy-Stockfish/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Fairy-Stockfish/src/: position.cpp
src/architectures/: azresnet.py  builder_util.py  net.py  next_vit_official_modules.py  resnet.py  rise_mobile_v3.py  rl.ipynb
src/bughouse/: defs.rs
src/domain/: board.py  board2planes.py  move2planes.py
src/download_games/: download.py
src/engine/: about.rs  transposition.rs
src/mcts/: action_selection.py  evaluation_fns.py  evaluator.py  mcts.py  search.py  state.py  tree.py  types.py
src/mctx/: search.py  tree.py
src/prepare_data/: bpgn_reader.py  data_pipeline.py  gen_planes.py  loader.py
src/preprocessing/: bughouse_dataset.py  convert_selfplay_data.py  generate_planes.py
src/rl/: arena.py  selfplay.py
src/schedulers/: lr_range_test.py
src/search/: alpha_beta.rs  defs.rs  eval.rs  history.rs  iter_deep.rs  qsearch.rs  sorting.rs
src/testing/: test_board.py  test_policy.py
src/tests/: test.py
src/training/: data_loaders.py  main.py  metrics.py  train.py  train_loop.py  train_util.py  trainer.py  trainer_agent.py
src/traininglogs/: events.out.tfevents.1769375570.ben-MS-7E07.992395.0  events.out.tfevents.1769389638.ben-MS-7E07.1360138.0  events.out.tfevents.1769390183.ben-MS-7E07.1364732.0  events.out.tfevents.1769390205.ben-MS-7E07.1364983.0  events.out.tfevents.1769412043.ben-MS-7E07.1696849.0  events.out.tfevents.1769412805.ben-MS-7E07.1706128.0  events.out.tfevents.1769413430.ben-MS-7E07.1711768.0  (+7 more)
src/types/: mod.rs  (+2 more)
tests/: eyeball_test_dataloader.py  test.py  test_flip_augmentation.py  test_generate_planes.py  test_representation.py  verify_flip_augmentation.py
training/: board.py  board2planes.py  bpgn_reader.py  constants.py  data_pipeline.py  gen_planes.py  loader.py  main.py  move2planes.py  tcn.py  test.py  train.ipynb  trainer.py
wandb/: latest-run
(+65 files in other folders)
